@@ -60,6 +60,11 @@ name|WildcardQuery
 extends|extends
 name|MultiTermQuery
 block|{
+DECL|field|termContainsWildcard
+specifier|private
+name|boolean
+name|termContainsWildcard
+decl_stmt|;
 DECL|method|WildcardQuery
 specifier|public
 name|WildcardQuery
@@ -72,6 +77,40 @@ name|super
 argument_list|(
 name|term
 argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|termContainsWildcard
+operator|=
+operator|(
+name|term
+operator|.
+name|text
+argument_list|()
+operator|.
+name|indexOf
+argument_list|(
+literal|'*'
+argument_list|)
+operator|!=
+operator|-
+literal|1
+operator|)
+operator|||
+operator|(
+name|term
+operator|.
+name|text
+argument_list|()
+operator|.
+name|indexOf
+argument_list|(
+literal|'?'
+argument_list|)
+operator|!=
+operator|-
+literal|1
+operator|)
 expr_stmt|;
 block|}
 DECL|method|getEnum
@@ -121,6 +160,42 @@ argument_list|)
 return|;
 return|return
 literal|false
+return|;
+block|}
+DECL|method|rewrite
+specifier|public
+name|Query
+name|rewrite
+parameter_list|(
+name|IndexReader
+name|reader
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+name|this
+operator|.
+name|termContainsWildcard
+condition|)
+block|{
+return|return
+name|super
+operator|.
+name|rewrite
+argument_list|(
+name|reader
+argument_list|)
+return|;
+block|}
+return|return
+operator|new
+name|TermQuery
+argument_list|(
+name|getTerm
+argument_list|()
+argument_list|)
 return|;
 block|}
 block|}
