@@ -248,6 +248,82 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+comment|/**    * Tests if a WildcardQuery that has no wildcard in the term is rewritten to a single    * TermQuery.    */
+DECL|method|testTermWithoutWildcard
+specifier|public
+name|void
+name|testTermWithoutWildcard
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|RAMDirectory
+name|indexStore
+init|=
+name|getIndexStore
+argument_list|(
+literal|"field"
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"nowildcard"
+block|,
+literal|"nowildcardx"
+block|}
+argument_list|)
+decl_stmt|;
+name|IndexSearcher
+name|searcher
+init|=
+operator|new
+name|IndexSearcher
+argument_list|(
+name|indexStore
+argument_list|)
+decl_stmt|;
+name|Query
+name|wq
+init|=
+operator|new
+name|WildcardQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"nowildcard"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertMatches
+argument_list|(
+name|searcher
+argument_list|,
+name|wq
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+name|wq
+operator|=
+name|searcher
+operator|.
+name|rewrite
+argument_list|(
+name|wq
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|wq
+operator|instanceof
+name|TermQuery
+argument_list|)
+expr_stmt|;
+block|}
 comment|/**    * Tests Wildcard queries with an asterisk.    */
 DECL|method|testAsterisk
 specifier|public
